# autodis

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  application.cpp  application.hpp  best.net  common.hpp  config.cpp  config.hpp  data_schema.sql  db_schema.sql  df.csv  df_chart.csv  df_norm.csv  framework.hpp  keeper.json  learn_runner.hpp  main.cpp  metadata_schema.sql  model_000.cpp  model_000.hpp  model_001.cpp  model_001.hpp  model_002.cpp  model_002.hpp  partial_dependence.hpp  pch.h  pch.hpp  prediction_view.hpp  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
collector/: CMakeLists.txt  factory.cpp  factory.h  factory.hpp  feed_uri.hpp  framework.hpp  main.cpp  pch.h  source_uri.hpp
collector/feed/: CMakeLists.txt  base.h  finam_daily_csv.cpp  finam_daily_csv.h  finam_daily_csv.hpp  finam_daily_file.cpp  finam_daily_file.h  framework.hpp  linear_generator.cpp  linear_generator.hpp  metastock.cpp  metastock.hpp  moex_daily_json.cpp  moex_daily_json.hpp  moex_intra_json.cpp  moex_intra_json.hpp  moex_lastday_xml.cpp  moex_lastday_xml.hpp  moex_rest.cpp  moex_rest.hpp  pch.h  pch.hpp
collector/source/: CMakeLists.txt  base.h  base.hpp  curl.cpp  curl.hpp  dummy.hpp  feed.h  feed.hpp  file.cpp  file.h  file.hpp  framework.hpp  pch.hpp  rest.cpp  rest.hpp  rest_by_chunks.cpp  rest_by_chunks.hpp  sink.h
feature/: CMakeLists.txt  abstract.cpp  abstract.hpp  error.hpp  framework.hpp  index_cursor.cpp  index_cursor.hpp  master_index.cpp  master_index.hpp  randomiser.cpp  randomiser.hpp  shop.cpp  shop.hpp  util.cpp  util.hpp
feature/impl/: delta.cpp  delta.hpp  shift_delta.cpp  shift_delta.hpp  sma.cpp  sma.hpp  stored.cpp  stored.hpp  track.cpp  track.hpp
keeper/: CMakeLists.txt  common.hpp  config.cpp  config.h  config.hpp  config.json.example  data.cpp  data.h  data_handle.hpp  data_read.cpp  data_read.hpp  data_uri.hpp  data_write.cpp  data_write.hpp  framework.hpp  keeper.h  keeper.hpp  keeper.json  metadata.cpp  metadata.h  metadata.hpp  pch.h  pch.hpp
learning/: CMakeLists.txt  activation.hpp  common.hpp  config.hpp  framework.hpp  learning.hpp  mfn.cpp  mfn.hpp  pch.hpp  progress_view.hpp  rprop.hpp  sample_filler.hpp
model/: CMakeLists.txt  abstract.hpp  common.hpp  factory.cpp  factory.hpp  file.cpp  file.hpp  framework.hpp  linear_test.cpp  linear_test.hpp  model_000.cpp  model_000.hpp  model_001.cpp  model_001.hpp  model_002.cpp  model_002.hpp  model_003.cpp  model_003.hpp  model_004.cpp  model_004.hpp  model_005.cpp  model_005.hpp  model_006.cpp  model_006.hpp  model_008.cpp  model_008.hpp  model_009.cpp  model_009.hpp  model_010.cpp  model_010.hpp  model_011.cpp  model_011.hpp
seriescfg/: CMakeLists.txt  config.cpp  config.hpp  framework.hpp  main.cpp  op_create.cpp  op_create.hpp  op_delete.cpp  op_delete.hpp  series_params.cpp  series_params.hpp
shared/: CMakeLists.txt  pch.hpp  series.hpp  shared.cpp  shared.h  shared.hpp
shared/data/: CMakeLists.txt  frame.cpp  frame.hpp  framework.hpp  pch.hpp  view.cpp  view.hpp
shared/math/: CMakeLists.txt  framework.hpp  normalization.hpp  pch.hpp  sma_delta.cpp  sma_delta.hpp  statistics.hpp  target_delta.hpp  track.cpp  track.hpp
shared/util/: CMakeLists.txt  field_map.cpp  field_map.hpp  file_system.cpp  file_system.hpp  framework.hpp  json.hpp  logger.cpp  logger.hpp  pch.h  pch.hpp  scope_lifetime.hpp  signal_handler.hpp  time.cpp  time.hpp  uri.cpp  uri.h  uri.hpp
visual/: CMakeLists.txt  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  box_plot.cpp  box_plot.hpp  chart.cpp  chart.hpp  framework.hpp  heatmap.cpp  heatmap.hpp  partial_dependence_view.cpp  partial_dependence_view.hpp  scale_date.cpp  scale_date.hpp  scale_y.cpp  scale_y.hpp  shader.cpp  shader.hpp  util.cpp  util.hpp
